--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "bundle": "rollup -c",
     "dev": "chokidar --initial \"browser/*.*\" \"dist/*.*\" \"example/*.md\" --command \"npm start\"",
-    "start": "node bin/cli.js example/presentation.md example/index.html",
+    "start": "node bin/cli.js example/presentation.md example/presentation.html",
     "pretest": "npm run bundle",
-    "test": "echo 'no tests yet'"
+    "test": "node bin/cli.js example/presentation.md example/presentation.html"
   },
   "author": "Nico Rehwaldt<https://github.com/nikku>",
   "license": "MIT",
