--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "chokidar-cli": "^2.1.0",
+    "js-yaml": "^4.0.0",
     "mdast-comment-marker": "^1.1.2",
     "rehype-document": "^5.1.0",
     "rehype-format": "^3.1.0",
+    "rehype-meta": "^2.0.0",
     "rehype-stringify": "^8.0.0",
     "rehype-wrap": "^1.0.10",
     "remark-breaks": "^2.0.1",
