--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "chokidar --initial \"browser/*.*\" \"dist/*.*\" \"example/*.md\" --command \"npm start\"",
     "start": "node bin/cli.js example/presentation.md example/presentation.html",
     "pretest": "npm run bundle",
+    "version": "./tasks/bump-examples",
     "test": "node bin/cli.js example/presentation.md example/presentation.html"
   },
   "author": "Nico Rehwaldt<https://github.com/nikku>",
