--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
     "rollup": "^2.36.1",
+    "rollup-plugin-string": "^3.0.0",
     "twemoji": "^13.0.1",
     "unified": "^9.2.0",
     "unist-util-visit-parents": "^3.1.1",
