--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
   },
   "author": "Nico Rehwaldt<https://github.com/nikku>",
   "license": "MIT",
+  "keywords": [
+    "markdown-to-html",
+    "markdown",
+    "presentation",
+    "cli"
+  ],
+  "files": [
+    "dist",
+    "bin"
+  ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -41,12 +51,6 @@
     "unist-util-visit-parents": "^3.1.1",
     "vfile": "^4.2.1"
   },
-  "keywords": [
-    "markdown-to-html",
-    "markdown",
-    "presentation",
-    "cli"
-  ],
   "dependencies": {
     "mri": "^1.1.6",
     "opener": "^1.5.2"
