--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "pfwr",
   "version": "0.6.0",
   "description": "The last markdown to HTML slide show generator you need",
-  "main": "dist/index.js",
+  "module": "dist/index.js",
   "bin": "./bin/cli.js",
+  "type": "module",
   "scripts": {
     "all": "npm run bundle && npm run test",
     "bundle": "rollup -c",
@@ -26,30 +27,30 @@
     "bin"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "chokidar-cli": "^2.1.0",
+    "@rollup/plugin-commonjs": "^23.0.0",
+    "@rollup/plugin-json": "^5.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "chokidar-cli": "^3.0.0",
     "js-yaml": "^4.1.0",
-    "mdast-comment-marker": "^1.1.2",
-    "rehype-document": "^5.1.0",
-    "rehype-format": "^3.1.0",
-    "rehype-meta": "^2.0.0",
-    "rehype-stringify": "^8.0.0",
+    "mdast-comment-marker": "^2.0.0",
+    "rehype-document": "^6.0.0",
+    "rehype-format": "^4.0.0",
+    "rehype-meta": "^3.1.0",
+    "rehype-stringify": "^9.0.2",
     "rehype-wrap": "^1.0.10",
-    "remark-breaks": "^2.0.2",
-    "remark-emoji": "^2.2.0",
-    "remark-external-links": "^8.0.0",
-    "remark-frontmatter": "^3.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-parse": "^9.0.0",
-    "remark-rehype": "^8.1.0",
-    "rollup": "^2.36.1",
+    "remark-breaks": "^3.0.1",
+    "remark-emoji": "^3.0.1",
+    "remark-external-links": "^9.0.1",
+    "remark-frontmatter": "^4.0.0",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.0",
+    "remark-rehype": "^10.1.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-string": "^3.0.0",
-    "twemoji": "^13.0.2",
-    "unified": "^9.2.1",
-    "unist-util-visit-parents": "^3.1.1",
-    "vfile": "^4.2.1"
+    "twemoji": "^14.0.2",
+    "unified": "^10.1.0",
+    "unist-util-visit-parents": "^5.0.0",
+    "vfile": "^5.1.0"
   },
   "dependencies": {
     "mri": "^1.1.6",
