--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "rollup": "^2.79.1",
     "rollup-plugin-string": "^3.0.0"
   },
+  "engines": {
+    "node": ">= 16"
+  },
   "dependencies": {
     "js-yaml": "^4.1.0",
     "mdast-comment-marker": "^2.1.0",
