--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "scripts": {
     "all": "run-s lint bundle test",
     "bundle": "rollup -c",
-    "dev": "chokidar --initial \"browser/*.*\" \"dist/*.*\" \"example/*.md\" --command \"npm start\"",
-    "start": "node bin/cli.js example/presentation.md example/presentation.html",
+    "bundle:watch": "rollup -cw",
+    "dev": "run-p *:watch",
+    "start": "node bin/cli.js example/presentation.md",
     "version": "./tasks/bump-examples",
     "lint": "eslint .",
-    "test": "node bin/cli.js example/presentation.md example/presentation.html",
+    "test": "run-s start",
+    "test:watch": "chokidar --initial \"browser/*.*\" \"dist/*.*\" \"bin/*.*\" \"example/*.md\" --command \"run-s test\"",
     "prepare": "npm run bundle"
   },
   "author": "Nico Rehwaldt<https://github.com/nikku>",
